<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.passwordgenerator.MainActivity">

    <TextView
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectPasswordLengthForThread"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/displaySeekBarPasswordLengthForThread" />

    <TextView
        android:text="@string/selectPasswordCountForThreadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectPasswordCountForThreadTextView"
        android:textSize="18sp"
        android:layout_below="@+id/forThreadTextView"
        android:layout_alignLeft="@+id/passwordCountForThreadSeekbar"
        android:layout_alignStart="@+id/passwordCountForThreadSeekbar"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:id="@+id/displaySeekBarPasswordCountForThread"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:layout_alignBottom="@+id/selectPasswordCountForThreadTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/passwordCountForThreadSeekbar"
        android:layout_below="@+id/selectPasswordCountForThreadTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/selectPasswordLengthForThread"
        android:textSize="18sp"
        android:text="@string/selectPasswordLengthForThread"
        android:layout_below="@+id/passwordCountForThreadSeekbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/passwordLengthForThreadSeekBar"
        android:layout_below="@+id/displaySeekBarPasswordLengthForThread"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/forAsyncTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLengthForThreadSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/forAsyncTaskTextView"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/selectPasswordCountForThreadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forAsyncTaskTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/selectPasswordCountForAsyncTask"
        android:textSize="18sp" />

    <TextView
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectPasswordCountForAsyncTask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/displaySeekBarPasswordCountForAsyncTask" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectPasswordCountForAsyncTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/passwordCountForAsyncTaskSeeBar" />

    <TextView
        android:text="@string/selectPasswordLengthForThread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordCountForAsyncTaskSeeBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/selectPasswordLengthForAsyncTask"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectPasswordLengthForAsyncTask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/displaySeekBarPasswordLengthForAsyncTask" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectPasswordLengthForAsyncTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/passwordLengthForAsyncTaskSeekbar" />

    <TextView
        android:text="@string/forThreadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/forThreadTextView"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generateButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
